Edited wiki page through web user interface.

--- a/wiki/Doc_Outils.wiki
+++ b/wiki/Doc_Outils.wiki
@@ -23,14 +23,13 @@ TODO
 
 === Connexion à la base ===
 
-Pour se connecter à la base SVN, créez d'abords un répertoire (n'importe où sur votre machine). Ce répertoire sera l'image locale de la base. Faites clic droit sur votre dossier, puis *SVN Checkout...* Dans la fenêtre qui s'ouvre :
+Commencer par créer un répertoire. Ce dossier sera une copie locale de la base. Pour connecter le répertoire à la base SVN, faites un clic droit sur votre dossier, puis *SVN Checkout...*. Dans la fenêtre qui s'ouvre :
 
-*URL of repository:* Elle est donnée dans l'onglet *Source* de Google Code. Attention à bien prendre l'URL pour les membres, qui est sécurisée (https). Laissez les autres champs à leur valeur par défaut. *OK*.
+*URL of repository :* elle est donnée dans l'onglet *Source* de Google Code. Attention à bien prendre l'URL pour les membres, qui est sécurisée (https). Laissez les autres champs à leur valeur par défaut. *OK*.
 
 Dans la fenêtre d'identification :
 
-*Username:* Votre nom d'utilisateur (càd votre adresse gmail sans @gmail.com). *Password:* Le mot de passe est sur la page _googlecode.com password_ dont le lien est
-donné sous l'URL de la base dans l'onglet *Source*. Si vous n'êtes pas sur votre PC perso, ne cochez pas la case *Save authentication*.
+*Username :* votre nom d'utilisateur (càd votre adresse gmail sans @gmail.com). *Password :* le mot de passe est sur la page _password_ dont le lien est donné sous l'URL de la base dans l'onglet *Source*. Si vous n'êtes pas sur votre PC perso, ne cochez pas la case *Save authentication*.
 
 Et paf, vous êtes connecté. Normalement un joli icône vert va apparaitre sur le dossier.
 
