--- a/wiki/Doc_Outils.wiki
+++ b/wiki/Doc_Outils.wiki
@@ -33,7 +33,7 @@ Et paf, vous êtes connecté. Tortoise va récupérer le contenu de la base pour
 
 Note : il se peut que les icônes n'apparaissent qu'après un redémarrage.
 
-=== Récupération de trucs (SVN Update) ===
+=== Récupérage de trucs (SVN Update) ===
 
 Clic droit sur le dossier connecté à la base (ou un sous dossier, ou un fichier), puis *SVN Update*. Cette manip' est à faire régulièrement pour être sûr d'avoir les dernières versions des modules codés par les autres.
 
@@ -49,6 +49,10 @@ Lorsque que vous créez un nouveau fichier/dossier dans votre répertoire, il n'
 Jusqu'ici, le fichier n'a toujours pas été ajouté à la base, ce qui vous permet d'annuler si vous avez malencontreusement glissé sur votre souris. Il ne sera réellement ajouté qu'au prochain *SVN Commit...*.
 
 Note : vérifiez bien les trucs que vous rajoutez. Merci de ne pas ajouter, par exemple, vos fichiers de réglages perso de Visual Studio, ou autre connerie d'Intellisense. En principe, seuls les fichiers .h et .cpp sur lesquels vous bossez devraient êtres ajoutés.
+
+=== Supprimage de trucs ===
+
+TODO
 
 === Trucs & astuces ===
 
