Edited wiki page through web user interface.

--- a/wiki/Guide_de_style.wiki
+++ b/wiki/Guide_de_style.wiki
@@ -3,6 +3,10 @@
 
 = Guide de style =
 
+== Langue ==
+
+Les variables, fonctions et tous les autres éléments du code doivent être nommés en anglais. Les commentaires sont en français.
+
 == Les variables ==
 
 Nomenclature : {{{[portée]_[type]MaVariable}}}.
