--- a/wiki/PhysX.wiki
+++ b/wiki/PhysX.wiki
@@ -14,8 +14,12 @@ Il faut absolument installer le PhysX System Software en premier (dixit NVIDIA).
 
 == Ce qu'il faut rajouter dans Visual Studio ==
 
-Linkage dans les options de visual: 
+Dans Tools > Options > VC++ Directories..
+
+Include files :
  * (SDK DIR)\SDKs\Physics\include
  * (SDK DIR)\SDKs\PhysXLoader\include
  * (SDK DIR)\SDKs\Foundation\include
- * (SDK DIR)\TrainingPrograms\Programs\Shared_Source\Timer
+
+Library files :
+ * (SDK DIR)\SDKs\lib\Win32
