Edited wiki page through web user interface.

--- a/wiki/Guide_de_style.wiki
+++ b/wiki/Guide_de_style.wiki
@@ -21,11 +21,11 @@ Les variables locales n'ont pas d'indicateur de portée (du coup c'est pas la pe
 === Types ===
 
 || p || pointeur ||
-|| c || ~~caractère (char)~~ ||
-|| i || ~~entier signé (int)~~ ||
-|| u || ~~entier non signé (unsigned int)~~ ||
-|| f || ~~flottant (float)~~ ||
-|| s || ~~chaîne de caractère (string)~~ ||
+|| - || caractère (char) ||
+|| - || entier signé (int) ||
+|| - || entier non signé (unsigned int) ||
+|| - || flottant (float) ||
+|| - || chaîne de caractère (string) ||
 
 Note : finalement seul le pointeur est vraiment utile..
 
