Edited wiki page through web user interface.

--- a/wiki/PhysX_BB.wiki
+++ b/wiki/PhysX_BB.wiki
@@ -6,18 +6,19 @@ L'exporter du plugin max n'exporte que les paramètres physiques. Il faut donc l
 
 == Le mesh ==
 
-* A placer au centre. Le pivot va poser des problèmes, je regarde comment faire en ce moment, à venir donc.
-* Exporter la sélection.
+ * A placer au centre. Le pivot va poser des problèmes, je regarde comment faire en ce  moment, à venir donc.
+ * Exporter la sélection.
 
 == La Bounding Box ==
 
-* Créer un cube, une sphère ou une capsule.
-* Ajuster la taille (attention, pas de scale sans passer par le modificateur !)
-* Onglet des outils, cliquer sur le marteaux.
-* Dans la sous partie PhysX Utility, cliquer sur PhysX Control Panel.
-* Régler les paramètres.
-* Export to collada.
+ * Créer un cube, une sphère ou une capsule.
+ * Ajuster la taille (attention, pas de scale sans passer par le modificateur !)
+ * Onglet des outils, cliquer sur le marteaux.
+ * Dans la sous partie PhysX Utility, cliquer sur PhysX Control Panel.
+ * Régler les paramètres.
+ * Export to collada.
 
 == Dans le code ==
 
-SceneObjetPhysics* Objet = new SceneObjetPhysics( "Objet_Mesh.DAE", "Objet_Physic.DAE", Vector3f(0.0f, 0.0f, 0.0f));
+SceneObjetPhysics Objet = new SceneObjetPhysics( "Objet_Mesh.DAE", "Objet_Physic.DAE", Vector3f(0.0f, 0.0f, 0.0f));
+(C'est un pointeur mais j'arrive pas a mettre l'étoile, c'est pour le gras !)
